@@ -190,6 +190,7 @@ module VpsFree::Irc::Bot
 
       def send_channels(msg)
         bot.channels.each do |channel|
+          next unless config[:channels].include?(channel.name)
           log_mutable_send(channel, (config[:prefix] || '[DokuWiki]')+' '+msg)
         end
       end
